Fix mobile overflow scrolling

--- a/src/main/content/javadocs/liberty-javaee7-javadoc/stylesheet.css
+++ b/src/main/content/javadocs/liberty-javaee7-javadoc/stylesheet.css
@@ -739,15 +739,12 @@ IFRAME specific styles
    .rightContainer {
         position: relative;      
         left: 0;  
+        overflow: auto;
    }
 
    .topNav {
        overflow-x: auto;
        padding-bottom: 15px;
-   }
-
-   main, .contentContainer, .header {
-       overflow: auto;
    }
 }
 
